# wpscrape

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/wpscrape/: __init__.py  _endpoints.py  _http.py  _parsers.py  client.py  exceptions.py  exporter.py  models.py
src/wpscrape/api/: app.py  deps.py  schemas.py
src/wpscrape/api/routes/: categories.py  products.py  site.py
src/wpscrape/cli/: app.py  output.py
src/wpscrape/cli/commands/: categories.py  products.py  serve.py  site.py
tests/: test_endpoints.py  test_models.py  test_parsers.py
